static/css/base.css
:root {
  --bg-100: #f1f1f1;
  --bg-200: #e1e1e1;
  --accent: #1e88e5;
  --warning: #ffe9b4;
  --purple: #290164;
}

body {
  font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Ubuntu, roboto, noto, arial, sans-serif; 
}

.center {
  display: flex;
  justify-content: center;
}

a {
  color: var(--accent);
  text-decoration: none;
  word-break: break-word
}

p {
  word-break: break-word
}

header {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
}

.searchBar {
  height: 16px;
  font-size: 14px;
  padding: 0.5em;
  border: none;
  border-bottom: 1px solid var(--bg-200);
  outline: none;
}

.sectionHeader {
  margin-top: 0;
}

main {
  margin: 0 12vw;
}

.claimsGrid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
  gap: 1rem;
}

.claimLink {
  color: #000;
}

.claimMeta {
  display: flex;
  font-weight: 600;
  font-size: 14px;
  justify-content: space-between;
}

.pfp {
  border-radius: 100%;
  object-fit: cover;
  aspect-ratio: 1/1;
}

.pfp--default {
  background-color: var(--accent);
}

.thumbnailWrapper {
  padding: 28.125%;
  position: relative;
  box-sizing: border-box;
}

.description {
  overflow: hidden;
  max-height: 8.5em;
}

.description br:last-of-type {
  display: none;
}

.videoDesc__meta {
  display: flex;
  gap: 10px;
}

.videoDesc__meta__item-btn div,
.videoDesc__meta__item {
  display: flex;
  align-items: center;
  gap: 4px;
  border-radius: 6px;
}

.videoDesc__meta__item .material-icons-outlined {
  font-size: 1em;
}

.videoDesc__meta__item-btn a {
  color: #000;
  display: flex;
  align-items: center;
}

.videoDesc__meta__item-btn div {
  background-color: var(--bg-100);
  padding: 0.5em;
}

.videoDesc__meta__item-btn div:hover {
  background-color: var(--bg-200);
}

.videoDesc__data,
.videoDesc__channel {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 10px;
}

#expandBtn {
  display: none;
}

#expandBtn ~ label > a::after {
  content: "Show more";
}

label {
  color: var(--accent);
  text-decoration: underline;
  cursor: pointer;
}

#expandBtn:checked ~ label > a::after {
  content: "Show less";
}

#expandBtn:checked ~ div {
  overflow: unset;
  max-height: none;
  height: 100%;
}

.thumbnailWrapper {
  padding: 28.125%;
  position: relative;
  box-sizing: border-box;
}

.thumbnail {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.channelThumbnail {
  object-fit: scale-down;
}

.duration {
  position: absolute;
  background-color: rgba(35, 35, 35, 0.75);
  color: white;
  border-radius: 2px;
  padding: 2px;
  font-size: 16px;
  right: 0.25em;
  bottom: -0.75em;
}

.pageSelector {
  display: flex;
  justify-content: space-between;
}

footer {
  display: flex;
  justify-content: center;
  flex-direction: row;
  gap: 10px;
}

@media only screen and (max-width: 812px) {
  main {
    margin: 0;
  }
  .videoData {
    flex-direction: column;
  }
  .videoData__side {
    width: 100%;
  }
  .videoMeta {
    width: 100%;
  }
  .videoMeta__wrapper {
    flex-direction: column;
  }
  .videoMeta__thumbs {
    display: flex;
    flex-direction: row;
    gap: 6px;
    margin-top: -1.75em;
    height: 1.5em;
  }
  .videoDesc {
    width: 100%;
  }
  footer {
    flex-direction: column;
    text-align: center;
  }
}

@media (prefers-color-scheme: dark) {
  :root {
    --bg-100: #212121;
    --bg-200: #313131;
  }
  body {
    background-color: #000;
    color: white;
  }
  .claimLink {
    color: #fff;
  }
  .logo {
    filter: invert(1) hue-rotate(180deg);
  }
  .searchBar {
    background-color: #000;
  }
}

